pixmapdir=	$(datadir)/themes/LargePrint/pixmaps

pixmap_DATA=    stock_about.png stock_add.png stock_apply.png \
                stock_attach.png stock_text_bold.png stock_book.png \
                stock_cancel.png stock_cdrom.png stock_clear.png \
                stock_close.png stock_connect.png stock_convert.png \
                stock_copy.png stock_cut.png stock_delete.png \
                stock_dialog_error.png stock_dialog_info.png \
                stock_dialog_question.png stock_dialog_warning.png \
                stock_disconnect.png stock_edit.png stock_empty.png \
                stock_execute.png stock_export.png \
                stock_search_and_replace.png stock_search.png \
                stock_floppy.png stock_left.png \
                stock_down.png stock_right.png \
                stock_up.png stock_bottom.png \
                stock_first.png stock_last.png \
                stock_top.png stock_help.png stock_home.png \
                stock_import.png stock_index.png \
                stock_insert-image.png stock_insert-object.png \
                stock_insert-table.png stock_text_italic.png \
                stock_jump-to.png stock_text_align_center.png \
                stock_text_align_justify.png stock_text_align_left.png \
                stock_text_align_right.png stock_line_in.png \
                stock_mike.png stock_broken_image.png stock_new.png \
                stock_ok.png stock_open.png stock_paste.png \
                stock_preferences.png stock_print-preview.png \
                stock_print.png stock_properties.png stock_exit.png \
                stock_redo.png stock_refresh.png stock_remove.png \
                stock_revert.png stock_save_as.png \
                stock_save.png stock_colorselector.png \
                stock_font.png stock_sort_ascending.png \
                stock_sort_descending.png stock_spellcheck.png \
                stock_stop.png stock_text_strikethrough.png \
                stock_undelete.png stock_text_underline.png \
                stock_undo.png stock_volume.png stock_zoom_1.png \
                stock_zoom_fit.png stock_zoom_in.png \
                stock_zoom_out.png stock_yes.png stock_no.png \
                stock_dnd.png stock_dnd_multiple.png \
                stock_run.png stock_searchtool.png stock_lockscreen.png \
                stock_logout.png stock_gnome-logo.png stock_cde-menu.png \
                stock_internet.png stock_gnome-util.png \
                stock_launcher-program.png \
                stock_corner-panel.png stock_edge-panel.png \
                stock_floating-panel.png stock_sliding-panel.png \
                stock_menu-panel.png stock_multimedia.png \
                stock_drawer.png stock_screenshot.png \
                media-prev.png media-next.png \
                media-stop.png media-eject.png \
                media-play-pause.png

EXTRA_DIST=	$(pixmap_DATA)
