THEME_IN_FILES = index.theme.in

%.theme:   %.theme.in $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*.po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache

icondir = $(datadir)/icons/HighContrast-SVG
nobase_icon_DATA = \
  index.theme \
  scalable/apps/internet-mail.svg \
  scalable/apps/multimedia-volume-control.svg \
  scalable/apps/preferences-desktop-keyboard.svg \
  scalable/apps/internet-web-browser.svg \
  scalable/apps/accessories-dictionary.svg \
  scalable/apps/preferences-desktop-font.svg \
  scalable/apps/preferences-desktop-locale.svg \
  scalable/apps/utilities-system-monitor.svg \
  scalable/apps/preferences-system-network-proxy.svg \
  scalable/apps/preferences-system-windows.svg \
  scalable/apps/system-software-update.svg \
  scalable/apps/help-browser.svg \
  scalable/apps/preferences-system-session.svg \
  scalable/apps/preferences-desktop-wallpaper.svg \
  scalable/apps/accessories-calculator.svg \
  scalable/apps/preferences-desktop-accessibility.svg \
  scalable/apps/accessories-text-editor.svg \
  scalable/apps/internet-news-reader.svg \
  scalable/apps/internet-group-chat.svg \
  scalable/apps/accessories-character-map.svg \
  scalable/apps/preferences-desktop-multimedia.svg \
  scalable/apps/system-file-manager.svg \
  scalable/apps/preferences-desktop-theme.svg \
  scalable/apps/utilities-terminal.svg \
  scalable/apps/preferences-desktop-screensaver.svg \
  scalable/devices/drive-cdrom.svg \
  scalable/devices/audio-card.svg \
  scalable/devices/network-wired.svg \
  scalable/devices/multimedia-player.svg \
  scalable/devices/camera-photo.svg \
  scalable/devices/audio-input-microphone.svg \
  scalable/devices/input-gaming.svg \
  scalable/devices/video-display.svg \
  scalable/devices/input-mouse.svg \
  scalable/devices/camera-video.svg \
  scalable/devices/input-keyboard.svg \
  scalable/devices/printer.svg \
  scalable/devices/drive-removable-media.svg \
  scalable/devices/network-wireless.svg \
  scalable/devices/computer.svg \
  scalable/devices/drive-harddisk.svg \
  scalable/devices/media-floppy.svg \
  scalable/devices/media-cdrom.svg \
  scalable/devices/battery.svg \
  scalable/mimetypes/x-office-spreadsheet.svg \
  scalable/mimetypes/application-x-executable.svg \
  scalable/mimetypes/image-x-generic.svg \
  scalable/mimetypes/audio-x-generic.svg \
  scalable/mimetypes/video-x-generic.svg \
  scalable/mimetypes/font-x-generic.svg \
  scalable/mimetypes/text-x-generic.svg \
  scalable/emblems/emblem-symbolic-link.svg \
  scalable/emblems/emblem-photos.svg \
  scalable/emblems/emblem-readonly.svg \
  scalable/emblems/emblem-favorite.svg \
  scalable/emblems/emblem-documents.svg \
  scalable/actions/view-fullscreen.svg \
  scalable/actions/help-about.svg \
  scalable/actions/document-print.svg \
  scalable/actions/document-page-setup.svg \
  scalable/actions/appointment-new.svg \
  scalable/actions/zoom-best-fit.svg \
  scalable/actions/media-playback-stop.svg \
  scalable/actions/tool-check-spelling.svg \
  scalable/actions/mail-mark-junk.svg \
  scalable/actions/edit-find-replace.svg \
  scalable/actions/edit-select-all.svg \
  scalable/actions/edit-delete.svg \
  scalable/actions/insert-object.svg \
  scalable/actions/mail-send-receive.svg \
  scalable/actions/help-faq.svg \
  scalable/actions/format-indent-less.svg \
  scalable/actions/format-indent-more.svg \
  scalable/actions/go-down.svg \
  scalable/actions/go-bottom.svg \
  scalable/actions/system-shutdown.svg \
  scalable/actions/mail-mark-notjunk.svg \
  scalable/actions/zoom-original.svg \
  scalable/actions/format-text-strikethrough.svg \
  scalable/actions/document-open-recent.svg \
  scalable/actions/go-up.svg \
  scalable/actions/document-open.svg \
  scalable/actions/format-text-bold.svg \
  scalable/actions/media-seek-forward.svg \
  scalable/actions/format-justify-left.svg \
  scalable/actions/edit-redo.svg \
  scalable/actions/document-print-preview.svg \
  scalable/actions/document-new.svg \
  scalable/actions/view-sort-ascending.svg \
  scalable/actions/media-seek-backward.svg \
  scalable/actions/media-skip-forward.svg \
  scalable/actions/format-justify-fill.svg \
  scalable/actions/go-top.svg \
  scalable/actions/edit-undo.svg \
  scalable/actions/dialog-cancel.svg \
  scalable/actions/mail-reply-all.svg \
  scalable/actions/window-new.svg \
  scalable/actions/insert-text.svg \
  scalable/actions/go-home.svg \
  scalable/actions/edit-cut.svg \
  scalable/actions/format-text-direction-rtl.svg \
  scalable/actions/mail-reply-sender.svg \
  scalable/actions/document-save-as.svg \
  scalable/actions/mail-mark-read.svg \
  scalable/actions/contact-new.svg \
  scalable/actions/system-lock-screen.svg \
  scalable/actions/application-exit.svg \
  scalable/actions/zoom-in.svg \
  scalable/actions/dialog-close.svg \
  scalable/actions/system-run.svg \
  scalable/actions/go-jump.svg \
  scalable/actions/window-close.svg \
  scalable/actions/go-previous.svg \
  scalable/actions/insert-image.svg \
  scalable/actions/zoom-out.svg \
  scalable/actions/address-book-new.svg \
  scalable/actions/edit-clear.svg \
  scalable/actions/process-stop.svg \
  scalable/actions/format-text-direction-ltr.svg \
  scalable/actions/media-eject.svg \
  scalable/actions/media-record.svg \
  scalable/actions/edit-find.svg \
  scalable/actions/media-playback-pause.svg \
  scalable/actions/system-search.svg \
  scalable/actions/go-next.svg \
  scalable/actions/mail-mark-important.svg \
  scalable/actions/edit-paste.svg \
  scalable/actions/document-save.svg \
  scalable/actions/dialog-ok.svg \
  scalable/actions/help-contents.svg \
  scalable/actions/edit-copy.svg \
  scalable/actions/format-justify-right.svg \
  scalable/actions/go-first.svg \
  scalable/actions/go-last.svg \
  scalable/actions/mail-message-new.svg \
  scalable/actions/document-revert.svg \
  scalable/actions/system-log-out.svg \
  scalable/actions/mail-forward.svg \
  scalable/actions/format-text-italic.svg \
  scalable/actions/view-sort-descending.svg \
  scalable/actions/list-add.svg \
  scalable/actions/view-refresh.svg \
  scalable/actions/media-playback-start.svg \
  scalable/actions/format-text-underline.svg \
  scalable/actions/format-justify-center.svg \
  scalable/actions/document-properties.svg \
  scalable/actions/insert-link.svg \
  scalable/actions/list-remove.svg \
  scalable/actions/media-skip-backward.svg \
  scalable/places/start-here.svg \
  scalable/places/user-home.svg \
  scalable/places/network-server.svg \
  scalable/places/user-desktop.svg \
  scalable/places/network-workgroup.svg \
  scalable/places/folder.svg \
  scalable/places/folder-remote.svg \
  scalable/places/user-trash.svg \
  scalable/status/network-offline.svg \
  scalable/status/folder-open.svg \
  scalable/status/dialog-warning.svg \
  scalable/status/mail-attachment.svg \
  scalable/status/folder-drag-accept.svg \
  scalable/status/folder-visiting.svg \
  scalable/status/dialog-error.svg \
  scalable/status/dialog-information.svg \
  scalable/status/user-trash-full.svg \
  scalable/status/dialog-question.svg \
  scalable/status/image-missing.svg \
  scalable/status/network-online.svg \
  scalable/categories/preferences-system.svg \
  scalable/categories/applications-graphics.svg \
  scalable/categories/applications-other.svg \
  scalable/categories/preferences-desktop-peripherals.svg \
  scalable/categories/system-help.svg \
  scalable/categories/applications-system.svg \
  scalable/categories/applications-development.svg \
  scalable/categories/applications-utilities.svg \
  scalable/categories/preferences-desktop-accessibility.svg \
  scalable/categories/applications-accessories.svg \
  scalable/categories/preferences-desktop.svg \
  scalable/categories/preferences-system-network.svg \
  scalable/categories/applications-office.svg \
  scalable/categories/preferences-other.svg \
  scalable/categories/applications-internet.svg \
  scalable/categories/preferences-desktop-personal.svg \
  scalable/categories/applications-games.svg \
  scalable/categories/applications-multimedia.svg 

DISTCLEANFILES = index.theme
EXTRA_DIST = index.theme.in $(nobase_icon_DATA)
