pixmapdir= $(datadir)/pixmaps/nautilus/LowContrastLargePrint/sidebar_tab_pieces

pixmap_DATA = \
	fill-active.png	 middle-normal-prelight.png \
	fill-active-prelight.png middle-prelight-normal.png \
	fill-empty-space.png right-bumper.png \
	fill.png right-bumper-prelight.png \
	fill-prelight.png right-empty-space.png \
	left-bumper-active.png right-top-active.png \
	left-bumper-active-prelight.png right-top-active-prelight.png \
	left-bumper.png	right-top.png \
	left-bumper-prelight.png right-top-prelight.png \
	middle-normal-normal.png

EXTRA_DIST = $(pixmap_DATA)
