
themedir=	$(datadir)/icons/HighContrast-SVG/scalable

SUBDIRS = actions apps categories devices emblems emotes mimetypes places status

#install: install-am
#	if test -e $(DESTDIR)$(libexecdir)/icon-name-mapping; then \
#		cd $(icondir) ; \
#		for context in $(SUBDIRS) ;  do \
#			$(DESTDIR)$(libexecdir)/icon-name-mapping -c $$context; \
#		done \
#	fi
