NULL=

icondir=	$(datadir)/icons/HighContrastLargePrint/48x48/filesystems/

icon_DATA=	\
		gnome-fs-client.png \
                gnome-fs-directory-accept.icon \
                gnome-fs-directory-accept.png \
                gnome-fs-directory.icon\
                gnome-fs-directory.png \
                gnome-fs-executable.png \
                gnome-fs-ftp.png \
                gnome-fs-home.png \
                gnome-fs-network.png \
                gnome-fs-nfs.png \
                gnome-fs-regular.png \
                gnome-fs-share.png \
                gnome-fs-smb.png \
                gnome-fs-trash-empty.png \
                gnome-fs-trash-full.png \
		$(NULL)

EXTRA_DIST=	$(icon_DATA)
