NULL=

icondir=	$(datadir)/icons/LowContrastLargePrint/48x48/apps/

icon_DATA=	\
                accessibility-directory.png \
                advanced-directory.png \
		ax-applet.png \
                charpick.png \
		display-capplet.png \
		file-manager.png \
                file-roller.png \
                gcalctool.png \
		gdict.png \
                gedit-icon.png \
                gkb.png \
                gnome-applications.png \
                gnome-audio2.png \
                gnome-calc3.png \
                gnome-ccmime.png \
                gnome-ccscreensaver.png \
                gnome-cdplayer-icon.png \
                gnome-cd.png \
                gnome-character-map.png \
                clock.png \
                gnome-devel.png \
                gnome-eog.png \
                gnome-ghex.png  \
                gnome-ghostview.png \
                gnome-globe.png \
                gnome-graphics.png \
                gnome-grecord.png \
                gnome-help.png  \
                gnome-home.png \
                gnome-joystick.png \
                gnome-log.png \
                gnome-logout.png \
		gnome-logo-icon-transparent.png \
                gnome-mailcheck.png \
                gnome-mini-commander.png \
                gnome-mixer-applet.png \
                gnome-mixer.png \
                gnome-multimedia.png \
                gnome-panel.png \
		gnome-remote-desktop.png \
		gnome-run.png \
		gnome-screenshot.png \
		gnome-searchtool.png \
		gnome-searchtool-animation-rest.png \
		gnome-searchtool-animation.png \
                gnome-session.png \
                gnome-settings-accessibility-keyboard.png \
                gnome-settings-accessibility-technologies.png \
                gnome-settings-background.png \
                gnome-settings-default-applications.png \
                gnome-settings-font.png \
                gnome-settings-keybindings.png \
                gnome-settings.png \
                gnome-settings-sound.png \
                gnome-settings-theme.png \
		gnome-settings-ui-behavior.png \
                gnome-starthere.png \
                gnome-system.png \
                gnome-terminal.png \
                gnome-util.png \
                gnome-window-manager.png \
                gnome-windows.png \
                gnome-workspace.png \
                gucharmap.png \
                launcher-program.png \
		panel-drawer.png \
		panel-force-quit.png \
                perfmeter.png \
		start-here.png \
                window-capplet.png \
		$(NULL)

EXTRA_DIST=	$(icon_DATA)
